Placeholder for real temp data

--- a/examples/Land/Test/thermal_test.ipynb
+++ b/examples/Land/Test/thermal_test.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "temperature_calculator (generic function with 2 methods)"
+       "temperature_calculator (generic function with 1 method)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,24 +27,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.42"
+       "2.4200000000000004"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mineral_properties = \"Sand\"\n",
-    "theta_liquid = 0.35\n",
-    "theta_ice = 0.05\n",
+    "theta_liquid = 0.38\n",
+    "theta_ice = 0.02\n",
     "\n",
     "# Define thermal conductivity of soil\n",
     "κ_sand = (thermal_properties(mineral_properties,theta_liquid,theta_ice ))"
@@ -52,16 +52,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.8045e6"
+       "2.872e6"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,16 +78,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-7.891680000000038e6"
+       "-7.152144000000039e6"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
    "source": [
     "# c_s = 2.8045e6\n",
     "# theta_ice = 0.05\n",
-    "T = 275.8\n",
+    "T = 272.8\n",
     "T0 = 273.16\n",
     "\n",
     "# Define Internal Energy of soil\n",
@@ -104,16 +104,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "275.8"
+       "272.8"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
