Extract remaining citations
Extract remaining citations

Extract more citations, polish format

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -1,9 +1,803 @@
-@article{smagorinsky1963,
-  title={General circulation experiments with the primitive equations: I. The basic experiment},
-  author={Smagorinsky, Joseph},
-  journal={Monthly weather review},
-  volume={91},
-  number={3},
-  pages={99--164},
-  year={1963}
+# The citation keys have been formatted as:
+#    Last author name (titlecase), followed by
+#    (no characters in-between) the year.
+
+@article{Arabas2015,
+  title = {libcloudph++ 1.0: a single-moment bulk, double-moment bulk, and particle-based warm-rain microphysics library in C++},
+  author = {Arabas, Sylwester and Jaruga, Anna and Pawlowska, Hanna and Grabowski, Wojciech W},
+  journal = {Geoscientific Model Development},
+  volume = {8},
+  number = {6},
+  url = {https://www.geosci-model-dev.net/8/1677/2015/},
+  doi = {10.5194/gmd-8-1677-2015},
+  pages = {1677--1707},
+  year = {2015},
+  publisher = {Copernicus GmbH}
 }
+
+@article{Baer1972,
+  title = {An alternate scale representation of atmospheric energy spectra},
+  author = {Baer, Ferdinand},
+  journal = {Journal of the Atmospheric Sciences},
+  volume = {29},
+  number = {4},
+  url = {https://doi.org/10.1175/1520-0469(1972)029<0649:AASROA>2.0.CO;2},
+  pages = {649--664},
+  year = {1972}
+}
+
+@article{Bank1985,
+  title = {Transient simulation of silicon devices and circuits},
+  author = {R. E. Bank and W. M. Coughran and W. Fichtner and E. H. Grosse and D. J. Rose and R. K. Smith},
+  journal = {IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems},
+  volume = {4},
+  number = {4},
+  pages = {436-451},
+  year = {1985},
+  publisher = {IEEE},
+  doi = {10.1109/TCAD.1985.1270142}
+}
+
+@article{Beare2006,
+  title = {An intercomparison of large-eddy simulations of the stable boundary layer},
+  author = {Beare, Robert J and Macvean, Malcolm K and Holtslag, Albert AM and Cuxart, Joan and Esau, Igor and Golaz, Jean-Christophe and Jimenez, Maria A and Khairoutdinov, Marat and Kosovic, Branko and Lewellen, David and others},
+  journal = {Boundary-Layer Meteorology},
+  volume = {118},
+  number = {2},
+  doi = {10.1175/1520-0469(2000)057<1052:ALESSO>2.0.CO;2},
+  url = {https://doi.org/10.1175/1520-0469(2000)057<1052:ALESSO>2.0.CO;2},
+  pages = {247--272},
+  month = {04},
+  year = {2006},
+  publisher = {Springer}
+}
+
+@article{Berrut2004,
+  title = {Barycentric lagrange interpolation},
+  author = {Berrut, Jean-Paul and Trefethen, Lloyd N},
+  journal = {SIAM review},
+  volume = {46},
+  number = {3},
+  pages = {501--517},
+  year = {2004},
+  url = {https://doi.org/10.1137/S0036144502417715},
+  publisher = {SIAM}
+}
+
+@inproceedings{Boyd1996,
+  title = {The erfc-log filter and the asymptotics of the Euler and Vandeven sequence accelerations},
+  author = {Boyd, JP},
+  booktitle = {Proceedings of the Third International Conference on Spectral and High Order Methods},
+  pages = {267--276},
+  year = {1996},
+  organization = {Houston Math. J}
+}
+
+@article{Bull2014,
+  author = {Bull, J.R. and Jameson, A.},
+  title = {Simulation of the Compressible {Taylor Green} Vortex using High-Order Flux Reconstruction Schemes},
+  journal = {AIAA Aviation 7th AIAA theoretical fluid mechanics conference},
+  year = {2014},
+}
+
+@article{Businger1971,
+  title = {Flux-profile relationships in the atmospheric surface layer},
+  author = {Businger, Joost A and Wyngaard, John C and Izumi, Yꎬ and Bradley, Edward F},
+  journal = {Journal of the atmospheric Sciences},
+  volume = {28},
+  number = {2},
+  url = {https://doi.org/10.1175/1520-0469(1971)028<0181:FPRITA>2.0.CO;2},
+  pages = {181--189},
+  year = {1971}
+}
+
+@article{Byun1990,
+  title = {On the analytical solutions of flux-profile relationships for the atmospheric surface layer},
+  author = {Byun, Daewon W},
+  journal = {Journal of Applied Meteorology},
+  volume = {29},
+  number = {7},
+  pages = {652--657},
+  year = {1990}
+}
+
+@article{Desai2019,
+  title = {Aerosol-Mediated Glaciation of Mixed-Phase Clouds: Steady-State Laboratory Measurements},
+  author = {Desai, Neel and Chandrakar, KK and Kinney, G and Cantrell, W and Shaw, RA},
+  journal = {Geophysical Research Letters},
+  volume = {46},
+  number = {15},
+  pages = {9154--9162},
+  year = {2019},
+  publisher = {Wiley Online Library}
+}
+
+@article{Doms2011,
+  title = {A Description of the Nonhydrostatic Regional COSMO model. Part I: Dynamics and Numerics},
+  author = {Doms, G{\"u}nther and Baldauf, M},
+  journal = {Deutscher Wetterdienst, Offenbach},
+  volume = {-1},
+  year = {2011}
+}
+
+@article{Durran1982,
+  title = {On the effects of moisture on the Brunt-V{\"a}is{\"a}l{\"a} frequency},
+  author = {Durran, Dale R and Klemp, Joseph B},
+  journal = {Journal of the Atmospheric Sciences},
+  volume = {39},
+  number = {10},
+  url = {https://doi.org/10.1175/1520-0469(1982)039<2152:OTEOMO>2.0.CO;2},
+  pages = {2152--2158},
+  year = {1982}
+}
+
+@article{Carpenter1990,
+  title = {Application of the piecewise parabolic method (PPM) to meteorological modeling},
+  author = {Carpenter Jr, Richard L and Droegemeier, Kelvin K and Woodward, Paul R and Hane, Carl E},
+  journal = {Monthly Weather Review},
+  volume = {118},
+  number = {3},
+  url = {https://doi.org/10.1175/1520-0493(1990)118<0586:AOTPPM>2.0.CO;2},
+  pages = {586--612},
+  year = {1990}
+}
+
+@article{Eisenstat1983,
+  title = {Variational iterative methods for nonsymmetric systems of linear equations},
+  author = {Eisenstat, Stanley C and Elman, Howard C and Schultz, Martin H},
+  journal = {SIAM Journal on Numerical Analysis},
+  volume = {20},
+  number = {2},
+  pages = {345--357},
+  year = {1983},
+  publisher = {SIAM}
+}
+
+@book{GolubVanLoan2013,
+  title = {Matrix Computations},
+  author = {Gene H. Golub and Charles F. Van Loan},
+  edition = {4th},
+  isbn = {9781421407944},
+  publisher = {Johns Hopkins University Press},
+  address = {Baltimore, MD, USA},
+  url = {http://www.cs.cornell.edu/cv/GVL4/golubandvanloan.htm},
+  year = 2013
+}
+
+@article{Giraldo2013,
+  title = {Implicit-explicit formulations of a three-dimensional nonhydrostatic unified model of the atmosphere ({NUMA})},
+  author = {Giraldo, Francis X and Kelly, James F and Constantinescu, Emil M},
+  journal = {SIAM Journal on Scientific Computing},
+  volume = {35},
+  number = {5},
+  pages = {B1162--B1194},
+  year = {2013},
+  publisher = {SIAM}
+}
+
+@article{Grabowski1996,
+  title = {Two-time-level semi-Lagrangian modeling of precipitating clouds},
+  author = {Grabowski, Wojciech W and Smolarkiewicz, Piotr K},
+  journal = {Monthly weather review},
+  volume = {124},
+  number = {3},
+  url = {https://doi.org/10.1175/1520-0493(1996)124<0487:TTLSLM>2.0.CO;2},
+  pages = {487--497},
+  year = {1996}
+}
+
+@article{Grabowski1998,
+  title = {Toward cloud resolving modeling of large-scale tropical circulations: A simple cloud microphysics parameterization},
+  author = {Grabowski, Wojciech W},
+  journal = {Journal of the Atmospheric Sciences},
+  volume = {55},
+  number = {21},
+  pages = {3283--3298},
+  url = {https://journals.ametsoc.org/doi/pdf/10.1175/1520-0469%281998%29055%3C3283%3ATCRMOL%3E2.0.CO%3B2},
+  year = {1998}
+}
+
+@article{Grachev2007,
+  title = {SHEBA flux--profile relationships in the stable atmospheric boundary layer},
+  author = {Grachev, Andrey A and Andreas, Edgar L and Fairall, Christopher W and Guest, Peter S and Persson, P Ola G},
+  journal = {Boundary-layer meteorology},
+  volume = {124},
+  number = {3},
+  pages = {315--333},
+  year = {2007},
+  url = {https://doi.org/10.1007/s10546-007-9177-6},
+  publisher = {Springer}
+}
+
+@article{Gryanik2020,
+  title = {New modified and extended stability functions for the stable boundary layer based on SHEBA and parametrizations of bulk transfer coefficients for climate models},
+  author = {Gryanik, Vladimir M and L{\"u}pkes, Christof and Grachev, Andrey and Sidorenko, Dmitry},
+  journal = {Journal of the Atmospheric Sciences},
+  volume = {-1},
+  year = {2020}
+}
+
+@article{Harrington1995,
+  title = {Parameterization of ice crystal conversion processes due to vapor deposition for mesoscale models using double-moment basis functions. Part I: Basic formulation and parcel model results},
+  author = {Harrington, Jerry Y and Meyers, Michael P and Walko, Robert L and Cotton, William R},
+  journal = {Journal of the atmospheric sciences},
+  volume = {52},
+  number = {23},
+  pages = {4344--4366},
+  year = {1995}
+}
+
+@article{Held1994,
+  title = {A proposal for the intercomparison of the dynamical cores of atmospheric general circulation models},
+  author = {Held, Isaac M and Suarez, Max J},
+  journal = {Bulletin of the American Meteorological society},
+  volume = {75},
+  number = {10},
+  pages = {1825--1830},
+  year = {1994},
+  url = {https://doi.org/10.1175/1520-0477(1994)075<1825:APFTIO>2.0.CO;2},
+  publisher = {American Meteorological Society}
+}
+
+@article{Heun1900,
+  title = {Neue Methoden zur approximativen Integration der
+  Differentialgleichungen einer unabh\"{a}ngigen Ver\"{a}nderlichen},
+  author = {Heun, Karl},
+  journal = {Z. Math. Phys},
+  volume = {45},
+  pages = {23--38},
+  year = {1900}
+}
+
+@article{Kaul2015,
+  title = {Sensitivities in large-eddy simulations of mixed-phase Arctic stratocumulus clouds using a simple microphysics approach},
+  author = {Kaul, Colleen M and Teixeira, Jo{\~a}o and Suzuki, Kentaroh},
+  journal = {Monthly Weather Review},
+  volume = {143},
+  number = {11},
+  pages = {4393--4421},
+  year = {2015}
+}
+
+@article{Karrer2020,
+  title = {Ice Particle Properties Inferred from Aggregation Modelling},
+  author = {Karrer, M and Seifert, A and Siewert, C and Ori, D and von Lerber, A and Kneifel, S},
+  journal = {Journal of Advances in Modeling Earth Systems},
+  pages = {e2020MS002066},
+  volume = {-1},
+  year = {2020},
+  publisher = {Wiley Online Library}
+}
+
+@article{Kennedy2019,
+  title = {Higher-order additive Runge--Kutta schemes for ordinary differential equations},
+  author = {Kennedy, Christopher A and Carpenter, Mark H},
+  journal = {Applied Numerical Mathematics},
+  volume = {136},
+  pages = {183--205},
+  year = {2019},
+  publisher = {Elsevier}
+}
+
+@techreport{KennedyCarpenter2016,
+  title = {Diagonally implicit Runge-Kutta methods for ordinary differential equations. A review},
+  author = {C. A. Kennedy and M. H. Carpenter},
+  institution = {National Aeronautics and Space Administration},
+  year = {2016},
+  number = {NASA/TM–2016–219173},
+  address = {Langley Research Center, Hampton, VA}
+}
+
+@article{Kessler1995,
+  title = {On the continuity and distribution of water substance in atmospheric circulations},
+  author = {Kessler, Edwin},
+  journal = {Atmospheric research},
+  volume = {38},
+  number = {1-4},
+  pages = {109--145},
+  year = {1995},
+  publisher = {Elsevier}
+}
+
+@article{Khvorostyanov2002,
+  title = {Terminal velocities of droplets and crystals: Power laws with continuous parameters over the size spectrum},
+  author = {Khvorostyanov, Vitaly I and Curry, Judith A},
+  journal = {Journal of the atmospheric sciences},
+  volume = {59},
+  number = {11},
+  pages = {1872--1884},
+  year = {2002}
+}
+
+@article{KnothWensch2014,
+  title = {Generalized split-explicit Runge--Kutta methods for the compressible Euler equations},
+  author = {Knoth, Oswald and Wensch, Joerg},
+  journal = {Monthly Weather Review},
+  volume = {142},
+  number = {5},
+  pages = {2067--2081},
+  year = {2014}
+}
+
+@article{Kopriva2006,
+  title = {Metric identities and the discontinuous spectral element method on curvilinear meshes},
+  author = {Kopriva, David A},
+  journal = {Journal of Scientific Computing},
+  volume = {26},
+  number = {3},
+  pages = {301},
+  year = {2006},
+  url = {https://doi.org/10.1007/s10915-005-9070-8},
+  publisher = {Springer}
+}
+
+@article{Koshyk2001,
+  title = {The horizontal kinetic energy spectrum and spectral budget simulated by a high-resolution troposphere--stratosphere--mesosphere GCM},
+  author = {Koshyk, John N and Hamilton, Kevin},
+  journal = {Journal of the atmospheric sciences},
+  volume = {58},
+  number = {4},
+  url = {https://doi.org/10.1175/1520-0469(2001)058<0329:THKESA>2.0.CO;2},
+  pages = {329--348},
+  year = {2001}
+}
+
+@article{Kosovic2000,
+  title = {A large eddy simulation study of a quasi-steady, stably stratified atmospheric boundary layer},
+  author = {Kosovi{\'c}, Branko and Curry, Judith A},
+  journal = {Journal of the atmospheric sciences},
+  volume = {57},
+  number = {8},
+  pages = {1052--1068},
+  year = {2000}
+}
+
+@article{Lauritzen2012,
+  title = {A standard test case suite for two-dimensional linear transport on the sphere},
+  author = {Lauritzen, Peter Hjort and Skamarock, William C and Prather, MJ and Taylor, MA},
+  journal = {Geoscientific Model Development},
+  volume = {5},
+  number = {3},
+  url = {https://www.geosci-model-dev.net/5/887/2012/},
+  doi = {10.5194/gmd-5-887-2012},
+  pages = {887--901},
+  year = {2012}
+}
+
+@article{Light2016,
+  title = {Preserving nonnegativity in discontinuous Galerkin approximations to scalar transport via truncation and mass aware rescaling (TMAR)},
+  author = {Light, Devin and Durran, Dale},
+  journal = {Monthly Weather Review},
+  volume = {144},
+  number = {12},
+  doi = {10.1175/MWR-D-16-0220.1},
+  pages = {4771--4786},
+  year = {2016}
+}
+
+@article{Lilly1962,
+  title = {On the numerical simulation of buoyant convection},
+  author = {Lilly, Douglas K},
+  journal = {Tellus},
+  volume = {14},
+  number = {2},
+  doi = {10.1111/j.2153-3490.1962.tb00128.x},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.2153-3490.1962.tb00128.x},
+  eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.2153-3490.1962.tb00128.x},
+  pages = {148--172},
+  year = {1962},
+  publisher = {Wiley Online Library}
+}
+
+@article{Marshall1948,
+  title = {The distribution of raindrops with size},
+  author = {Marshall, John S and Palmer, W Mc K},
+  journal = {Journal of meteorology},
+  volume = {5},
+  number = {4},
+  pages = {165--166},
+  year = {1948}
+}
+
+@book{Mason2010,
+  title = {Physics of clouds},
+  author = {Mason, Basil John},
+  year = {2010},
+  publisher = {Clarendon Press}
+}
+
+@article{Morrison2008,
+  title = {A new two-moment bulk stratiform cloud microphysics scheme in the Community Atmosphere Model, version 3 (CAM3). Part I: Description and numerical tests},
+  author = {Morrison, Hugh and Gettelman, Andrew},
+  journal = {Journal of Climate},
+  volume = {21},
+  number = {15},
+  pages = {3642--3659},
+  year = {2008}
+}
+
+@article{Muhlbauer2013,
+  title = {Reexamination of the state of the art of cloud modeling shows real improvements},
+  author = {Muhlbauer, Andreas and Grabowski, Wojciech W and Malinowski, Szymon P and Ackerman, Thomas P and Bryan, George H and Lebo, Zachary J and Milbrandt, Jason A and Morrison, Hugh and Ovchinnikov, Mikhail and Tessendorf, Sarah and others},
+  journal = {Bulletin of the American Meteorological Society},
+  volume = {94},
+  number = {5},
+  doi = {doi:10.1175/BAMS-D-12-00188.1},
+  pages = {ES45--ES48},
+  year = {2013},
+  publisher = {American Meteorological Society}
+}
+
+@article{Niegemann2012,
+  title = {Efficient low-storage Runge--Kutta schemes with optimized stability regions},
+  author = {Niegemann, Jens and Diehl, Richard and Busch, Kurt},
+  journal = {Journal of Computational Physics},
+  volume = {231},
+  number = {2},
+  pages = {364--372},
+  year = {2012},
+  publisher = {Elsevier}
+}
+
+@article{Nishizawa2018,
+  title = {A Surface Flux Scheme Based on the Monin-Obukhov Similarity for Finite Volume Models},
+  author = {Nishizawa, S and Kitamura, Y},
+  journal = {Journal of Advances in Modeling Earth Systems},
+  volume = {10},
+  number = {12},
+  url = {https://doi.org/10.1029/2018MS001534},
+  doi = {10.1029/2018MS001534},
+  pages = {3159--3175},
+  year = {2018},
+  publisher = {Wiley Online Library}
+}
+
+@article{Ogura1971,
+  title = {Numerical simulation of the life cycle of a thunderstorm cell},
+  author = {Ogura, Yoshimitsu and Takahashi, Tsutomu},
+  journal = {Mon. Wea. Rev},
+  volume = {99},
+  number = {12},
+  pages = {895--911},
+  year = {1971},
+  publisher = {Citeseer}
+}
+
+@article{Rafei2018,
+  author = {Rafei, M.E. and K\"on\"oszy, L. and Rana, Z.},
+  title = {Investigation of Numerical Dissipation in Classicaland Implicit Large Eddy Simulations},
+  journal = {Aerospace},
+  year = {2018},
+}
+
+@article{Ralston1962,
+  title = {Runge-Kutta methods with minimum error bounds},
+  author = {Ralston, Anthony},
+  journal = {Mathematics of computation},
+  volume = {16},
+  number = {80},
+  pages = {431--437},
+  year = {1962},
+  doi = {10.1090/S0025-5718-1962-0150954-0}
+}
+
+@article{Roberts2018,
+  title = {Coupled Multirate Infinitesimal GARK Schemes for Stiff Systems with Multiple Time Scales},
+  author = {Roberts, Steven and Sarshar, Arash and Sandu, Adrian},
+  journal = {arXiv preprint arXiv:1812.00808},
+  volume = {-1},
+  year = {2019}
+}
+
+@article{Ronchi1996,
+  title = {The ``cubed sphere``: a new method for the solution of partial differential equations in spherical geometry},
+  author = {Ronchi, C. and Iacono, R. and Paolucci, P. S.},
+  journal = {Journal of Computational Physics},
+  volume = {124},
+  number = {1},
+  pages = {93--114},
+  year = {1996},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S0021999196900479},
+  doi = {10.1006/jcph.1996.0047}
+}
+
+@article{Rutledge1983,
+  title = {The mesoscale and microscale structure and organization of clouds and precipitation in midlatitude cyclones. VIII: A model for the “seeder-feeder” process in warm-frontal rainbands},
+  author = {Rutledge, Steven A and Hobbs, Peterv},
+  journal = {Journal of the Atmospheric Sciences},
+  volume = {40},
+  number = {5},
+  pages = {1185--1206},
+  year = {1983}
+}
+
+@article{Rutledge1984,
+  title = {The mesoscale and microscale structure and organization of clouds and precipitation in midlatitude cyclones. XII: A diagnostic modeling study of precipitation development in narrow cold-frontal rainbands},
+  author = {Rutledge, Steven A and Hobbs, Peter V},
+  journal = {Journal of the Atmospheric Sciences},
+  volume = {41},
+  number = {20},
+  pages = {2949--2972},
+  year = {1984}
+}
+
+@article{Saad1986,
+  title = {GMRES: A generalized minimal residual algorithm for solving nonsymmetric linear systems},
+  author = {Saad, Youcef and Schultz, Martin H},
+  journal = {SIAM Journal on scientific and statistical computing},
+  volume = {7},
+  number = {3},
+  pages = {856--869},
+  year = {1986},
+  publisher = {SIAM}
+}
+
+@article{Sandu2019,
+  title = {A class of multirate infinitesimal gark methods},
+  author = {Sandu, Adrian},
+  journal = {SIAM Journal on Numerical Analysis},
+  volume = {57},
+  number = {5},
+  pages = {2300--2327},
+  year = {2019},
+  publisher = {SIAM},
+  doi = {10.1137/18M1205492}
+}
+
+@article{Schar2002,
+  title = {A new terrain-following vertical coordinate formulation for atmospheric prediction models},
+  author = {Sch{\"a}r, Christoph and Leuenberger, Daniel and Fuhrer, Oliver and L{\"u}thi, Daniel and Girard, Claude},
+  journal = {Monthly Weather Review},
+  volume = {130},
+  number = {10},
+  issn = {0027-0644},
+  doi = {10.1175/1520-0493(2002)130<2459:ANTFVC>2.0.CO;2},
+  url = {https://doi.org/10.1175/1520-0493(2002)130<2459:ANTFVC>2.0.CO;2},
+  pages = {2459--2480},
+  month = {10},
+  year = {2002}
+}
+
+@article{Schlegel2012,
+  title = {Implementation of multirate time integration methods for air pollution modelling},
+  author = {Schlegel, M and Knoth, O and Arnold, M and Wolke, R},
+  journal = {Geoscientific Model Development},
+  volume = {5},
+  number = {6},
+  pages = {1395--1405},
+  year = {2012},
+  publisher = {Copernicus GmbH}
+}
+
+@article{Schlegel2009,
+  doi = {10.1016/j.cam.2008.08.009},
+  year = {2009},
+  month = {apr},
+  publisher = {Elsevier {BV}},
+  volume = {226},
+  number = {2},
+  pages = {345--357},
+  author = {Martin Schlegel and Oswald Knoth and Martin Arnold and Ralf Wolke},
+  title = {Multirate Runge-Kutta schemes for advection equations},
+  journal = {Journal of Computational and Applied Mathematics}
+}
+
+@article{Seifert2006,
+  title = {A two-moment cloud microphysics parameterization for mixed-phase clouds. Part 1: Model description},
+  author = {Seifert, Axel and Beheng, Klaus Dieter},
+  journal = {Meteorology and atmospheric physics},
+  volume = {92},
+  number = {1-2},
+  pages = {45--66},
+  year = {2006},
+  publisher = {Springer}
+}
+
+@article{Shu1988,
+  title = {Efficient implementation of essentially non-oscillatory shock-capturing schemes},
+  author = {Shu, Chi-Wang and Osher, Stanley},
+  journal = {Journal of computational physics},
+  volume = {77},
+  number = {2},
+  pages = {439--471},
+  year = {1988},
+  publisher = {Elsevier}
+}
+
+@article{Siebesma2003,
+  title = {A large eddy simulation intercomparison study of shallow cumulus convection},
+  author = {Siebesma, A Pier and Bretherton, Christopher S and Brown, Andrew and Chlond, Andreas and Cuxart, Joan and Duynkerke, Peter G and Jiang, Hongli and Khairoutdinov, Marat and Lewellen, David and Moeng, Chin-Hoh and others},
+  journal = {Journal of the Atmospheric Sciences},
+  volume = {60},
+  number = {10},
+  eprint = {https://journals.ametsoc.org/doi/pdf/10.1175/1520-0469%282003%2960%3C1201%3AALESIS%3E2.0.CO%3B2},
+  doi = {10.1175/1520-0469(2003)60<1201:ALESIS>2.0.CO;2},
+  url = {https://journals.ametsoc.org/doi/abs/10.1175/1520-0469%282003%2960%3C1201%3AALESIS%3E2.0.CO%3B2},
+  pages = {1201--1219},
+  year = {2003}
+}
+
+@inproceedings{Skilling2004,
+  title = {Programming the Hilbert curve},
+  author = {Skilling, John},
+  booktitle = {AIP Conference Proceedings},
+  volume = {707},
+  number = {1},
+  pages = {381--387},
+  year = {2004},
+  url = {https://doi.org/10.1063/1.1751381},
+  organization = {American Institute of Physics}
+}
+
+@article{Smagorinsky1963,
+  title = {General circulation experiments with the primitive equations: I. The basic experiment},
+  author = {Smagorinsky, Joseph},
+  journal = {Monthly weather review},
+  volume = {91},
+  number = {3},
+  url = {https://journals.ametsoc.org/mwr/article/91/3/99/98166},
+  doi = {10.1175/1520-0493(1963)091<0099:GCEWTP>2.3.CO;2},
+  pages = {99--164},
+  year = {1963}
+}
+
+@article{Spiteri2002,
+  title = {A new class of optimal high-order strong-stability-preserving time discretization methods},
+  author = {Spiteri, Raymond J and Ruuth, Steven J},
+  journal = {SIAM Journal on Numerical Analysis},
+  volume = {40},
+  number = {2},
+  pages = {469--491},
+  year = {2002},
+  publisher = {SIAM}
+}
+
+@article{Stevens2005,
+  title = {Evaluation of large-eddy simulations via observations of nocturnal marine stratocumulus},
+  author = {Stevens, Bjorn and Moeng, Chin-Hoh and Ackerman, Andrew S and Bretherton, Christopher S and Chlond, Andreas and de Roode, Stephan and Edwards, James and Golaz, Jean-Christophe and Jiang, Hongli and Khairoutdinov, Marat and others},
+  journal = {Monthly weather review},
+  volume = {133},
+  number = {6},
+  url = {https://doi.org/10.1175/MWR2930.1},
+  doi = {10.1175/MWR2930.1},
+  eprint = {https://doi.org/10.1175/MWR2930.1},
+  pages = {1443--1462},
+  year = {2005}
+}
+
+@article{Straka1993,
+  title = {Numerical solutions of a non-linear density current: A benchmark solution and comparisons},
+  author = {Straka, Jerry M and Wilhelmson, Robert B and Wicker, Louis J and Anderson, John R and Droegemeier, Kelvin K},
+  journal = {International Journal for Numerical Methods in Fluids},
+  volume = {17},
+  number = {1},
+  doi = {10.1002/fld.1650170103},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/fld.1650170103},
+  eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/fld.1650170103},
+  pages = {1--22},
+  year = {1993},
+  publisher = {Wiley Online Library}
+}
+
+@article{Taylor1937,
+  author = {Taylor, G. I. and Green, A. E.},
+  title = {Mechanisms of production of small eddies from large ones},
+  journal = {Proc. Roy. Soc. A},
+  volume = {158},
+  number = {895},
+  year = {1937},
+  doi = {doi.org/10.1098/rspa.1937.0036},
+}
+
+@article{Tomita2008,
+  doi = {10.1137/070692273},
+  year = {2008},
+  month = {jan},
+  publisher = {Society for Industrial and Applied Mathematics ({SIAM})},
+  volume = {30},
+  number = {6},
+  pages = {2755--2776},
+  author = {Hirofumi Tomita and Koji Goto and Masaki Satoh},
+  title = {A New Approach to Atmospheric General Circulation Model: Global Cloud Resolving Model {NICAM} and its Computational Performance},
+  journal = {{SIAM} Journal on Scientific Computing}
+}
+
+@book{Toro2013,
+  title = {Riemann solvers and numerical methods for fluid dynamics: a practical introduction},
+  author = {Toro, Eleuterio F},
+  year = {2013},
+  publisher = {Springer Science & Business Media}
+}
+
+@article{Ullrich2014,
+  title = {A proposed baroclinic wave test case for deep-and shallow-atmosphere dynamical cores},
+  author = {Ullrich, Paul A and Melvin, Thomas and Jablonowski, Christiane and Staniforth, Andrew},
+  journal = {Quarterly Journal of the Royal Meteorological Society},
+  volume = {140},
+  number = {682},
+  pages = {1590--1602},
+  year = {2014},
+  doi = {10.1002/qj.2241},
+  publisher = {Wiley Online Library}
+}
+
+@article{Vreman2004,
+  title = {An eddy-viscosity subgrid-scale model for turbulent shear flow: Algebraic theory and applications},
+  author = {Vreman, AW},
+  journal = {Physics of fluids},
+  volume = {16},
+  number = {10},
+  pages = {3670--3681},
+  year = {2004},
+  publisher = {AIP}
+}
+
+@article{Vreugdenhil2018,
+  title = {Large-eddy simulations of stratified plane Couette flow using the anisotropic minimum-dissipation model},
+  author = {Vreugdenhil, Catherine A and Taylor, John R},
+  journal = {Physics of Fluids},
+  volume = {30},
+  number = {8},
+  pages = {085104},
+  year = {2018},
+  url = {https://doi.org/10.1063/1.5037039},
+  doi = {10.1063/1.5037039},
+  publisher = {AIP Publishing LLC}
+}
+
+@article{Wang2006,
+  title = {Probability distributions of angle of approach and relative velocity for colliding droplets in a turbulent flow},
+  author = {Wang, Lian-Ping and Franklin, Charmaine N and Ayala, Orlando and Grabowski, Wojciech W},
+  journal = {Journal of the atmospheric sciences},
+  volume = {63},
+  number = {3},
+  pages = {881--900},
+  year = {2006}
+}
+
+@article{Wiin1967,
+  title = {On the annual variation and spectral distribution of atmospheric energy 1},
+  author = {WIIN-NIELSEN, Aksel},
+  journal = {Tellus},
+  volume = {19},
+  number = {4},
+  doi = {10.3402/tellusa.v19i4.9822},
+  pages = {540--559},
+  year = {1967},
+  publisher = {Wiley Online Library}
+}
+
+@article{Williamson1992,
+  title = {A standard test set for numerical approximations to the shallow water equations in spherical geometry},
+  author = {Williamson, David L and Drake, John B and Hack, James J and Jakob, R{\"u}diger and Swarztrauber, Paul N},
+  journal = {Journal of Computational Physics},
+  volume = {102},
+  number = {1},
+  doi = {10.1016/S0021-9991(05)80016-6},
+  url = {https://doi.org/10.1016/S0021-9991(05)80016-6},
+  pages = {211--224},
+  year = {1992},
+  publisher = {Elsevier}
+}
+
+@article{Wood2005,
+  title = {Drizzle in stratiform boundary layer clouds. Part II: Microphysical aspects},
+  author = {Wood, R},
+  journal = {Journal of the atmospheric sciences},
+  volume = {62},
+  number = {9},
+  pages = {3034--3050},
+  year = {2005}
+}
+
+@article{Wyngaard1975,
+  title = {Modeling the planetary boundary layer—extension to the stable case},
+  author = {Wyngaard, John C},
+  journal = {Boundary-Layer Meteorology},
+  volume = {9},
+  number = {4},
+  pages = {441--460},
+  year = {1975},
+  publisher = {Springer}
+}
+
