modified:   docs/bibliography.bib 	modified:   src/Atmos/Model/AtmosModel.jl 	modified:   src/Numerics/DGMethods/NumericalFluxes.jl

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -101,6 +101,21 @@
   year = {1990}
 }
 
+@article {Chen2013,
+      author = "Xi Chen and Natalia Andronova and Bram Van Leer and Joyce E. Penner and John P. Boyd and Christiane Jablonowski and Shian-Jiann Lin",
+      title = "A Control-Volume Model of the Compressible Euler Equations with a Vertical Lagrangian Coordinate",
+      journal = "Monthly Weather Review",
+      year = "01 Jul. 2013",
+      publisher = "American Meteorological Society",
+      address = "Boston MA, USA",
+      volume = "141",
+      number = "7",
+      doi = "10.1175/MWR-D-12-00129.1",
+      pages=      "2526 - 2544",
+      url = "https://journals.ametsoc.org/view/journals/mwre/141/7/mwr-d-12-00129.1.xml"
+}
+
+
 @article{Desai2019,
   title = {Aerosol-Mediated Glaciation of Mixed-Phase Clouds: Steady-State Laboratory Measurements},
   author = {Desai, Neel and Chandrakar, KK and Kinney, G and Cantrell, W and Shaw, RA},
