Add DBM453VoglEtAl time stepper

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -875,4 +875,13 @@
   publisher = {Springer}
 }
 
-
+@article{Vogl2019,
+  title={Evaluation of Implicit-Explicit Additive Runge-Kutta Integrators for the HOMME-NH Dynamical Core},
+  author={Vogl, Christopher J and Steyer, Andrew and Reynolds, Daniel R and Ullrich, Paul A and Woodward, Carol S},
+  journal={Journal of Advances in Modeling Earth Systems},
+  volume={11},
+  number={12},
+  pages={4228--4244},
+  year={2019},
+  publisher={Wiley Online Library}
+}
