--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -102,17 +102,17 @@
 }
 
 @article {Chen2013,
-      author = "Xi Chen and Natalia Andronova and Bram Van Leer and Joyce E. Penner and John P. Boyd and Christiane Jablonowski and Shian-Jiann Lin",
-      title = "A Control-Volume Model of the Compressible Euler Equations with a Vertical Lagrangian Coordinate",
-      journal = "Monthly Weather Review",
-      year = "01 Jul. 2013",
-      publisher = "American Meteorological Society",
-      address = "Boston MA, USA",
-      volume = "141",
-      number = "7",
-      doi = "10.1175/MWR-D-12-00129.1",
-      pages=      "2526 - 2544",
-      url = "https://journals.ametsoc.org/view/journals/mwre/141/7/mwr-d-12-00129.1.xml"
+  author = "Xi Chen and Natalia Andronova and Bram Van Leer and Joyce E. Penner and John P. Boyd and Christiane Jablonowski and Shian-Jiann Lin",
+  title = "A Control-Volume Model of the Compressible Euler Equations with a Vertical Lagrangian Coordinate",
+  journal = "Monthly Weather Review",
+  year = "01 Jul. 2013",
+  publisher = "American Meteorological Society",
+  address = "Boston MA, USA",
+  volume = "141",
+  number = "7",
+  doi = "10.1175/MWR-D-12-00129.1",
+  pages=      "2526 - 2544",
+  url = "https://journals.ametsoc.org/view/journals/mwre/141/7/mwr-d-12-00129.1.xml"
 }
 
 
@@ -781,15 +781,27 @@
 }
 
 @article{Webb2017,
-    author = {Webb, M. J. and Andrews, T. and Bodas-Salcedo, A. and Bony, S. and Bretherton, C. S. and Chadwick, R. and Chepfer, H. and Douville, H. and Good, P. and Kay, J. E. and Klein, S. A. and Marchand, R. and Medeiros, B. and Siebesma, A. P. and Skinner, C. B. and Stevens, B. and Tselioudis, G. and Tsushima, Y. and Watanabe, M.},
-    title = {The Cloud Feedback Model Intercomparison Project (CFMIP) contribution to CMIP6},
-    journal = {Geoscientific Model Development},
-    volume = {10},
-    year = {2017},
-    number = {1},
-    pages = {359--384},
-    url = {https://www.geosci-model-dev.net/10/359/2017/},
-    doi = {10.5194/gmd-10-359-2017},
+  author = {Webb, M. J. and Andrews, T. and Bodas-Salcedo, A. and Bony, S. and Bretherton, C. S. and Chadwick, R. and Chepfer, H. and Douville, H. and Good, P. and Kay, J. E. and Klein, S. A. and Marchand, R. and Medeiros, B. and Siebesma, A. P. and Skinner, C. B. and Stevens, B. and Tselioudis, G. and Tsushima, Y. and Watanabe, M.},
+  title = {The Cloud Feedback Model Intercomparison Project (CFMIP) contribution to CMIP6},
+  journal = {Geoscientific Model Development},
+  volume = {10},
+  year = {2017},
+  number = {1},
+  pages = {359--384},
+  url = {https://www.geosci-model-dev.net/10/359/2017/},
+  doi = {10.5194/gmd-10-359-2017},
+}
+
+@article {WickerSkamarock2002,
+  author = "Louis J. Wicker and William C. Skamarock",
+  title = "Time-Splitting Methods for Elastic Models Using Forward Time Schemes",
+  journal = "Monthly Weather Review",
+  year = "2002",
+  publisher = "American Meteorological Society",
+  volume = "130",
+  number = "8",
+  doi = "10.1175/1520-0493(2002)130<2088:TSMFEM>2.0.CO;2",
+  pages= "2088--2097",
 }
 
 @article{Wiin1967,
@@ -838,4 +850,5 @@
   doi = {10.1007/BF00223393},
   publisher = {Springer}
 }
+
 
