Docs: Some math format and reference fixes

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -345,6 +345,17 @@
   year = {2014}
 }
 
+@article{KnothWolke1998,
+  title = "Implicit-explicit Runge-Kutta methods for computing atmospheric reactive flows",
+  journal = "Applied Numerical Mathematics",
+  volume = "28",
+  number = "2",
+  pages = "327--341",
+  year = "1998",
+  doi = "https://doi.org/10.1016/S0168-9274(98)00051-8",
+  author = "Oswald Knoth and Ralf Wolke"
+}
+
 @article{Kopriva2006,
   title = {Metric identities and the discontinuous spectral element method on curvilinear meshes},
   author = {Kopriva, David A},
