Add new TimeStepping tutorial for IMEX schemes
Co-authored-by: Thomas H. Gibson <gibsonthomas1120@hotmail.com>

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -14,6 +14,14 @@
   publisher = {Copernicus GmbH}
 }
 
+@book{Atkinson2011,
+	title={Numerical solution of ordinary differential equations},
+	author={Atkinson, Kendall and Han, Weimin and Stewart, David E},
+	volume={108},
+	year={2011},
+	publisher={John Wiley \& Sons}
+}
+
 @article{Baer1972,
   title = {An alternate scale representation of atmospheric energy spectra},
   author = {Baer, Ferdinand},
@@ -289,6 +297,13 @@
   doi = {10.1029/2020MS002066},
   year = {2020},
   publisher = {Wiley Online Library}
+}
+
+@book{Kennedy2001,
+	title={Additive Runge-Kutta schemes for convection-diffusion-reaction equations},
+	author={Kennedy, Christopher Alan},
+	year={2001},
+	publisher={National Aeronautics and Space Administration, Langley Research Center}
 }
 
 @article{Kennedy2019,
