Equidistant cubed-sphere: Add a new cubed-sphere and rename existing functions
Rename all cubedshellwarp -> equiangular_cubed_shell_warp & cubedshellunwarp -> equiangular_cubed_shell_unwarp

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -492,6 +492,18 @@
   publisher = {American Meteorological Society}
 }
 
+@article{Nair2005,
+  title = {A Discontinuous Galerkin Transport Scheme on the Cubed Sphere},
+  author = {Nair, Ramachandran D and Thomas, Stephen J and Loft, Richard D},
+  journal = {Monthly Weather Review},
+  volume = {133},
+  number = {4},
+  doi = {doi:10.1175/MWR2890.1},
+  pages = {814--828},
+  year = {2005},
+  publisher = {American Meteorological Society}
+}
+
 @article{Niegemann2012,
   title = {Efficient low-storage Runge--Kutta schemes with optimized stability regions},
   author = {Niegemann, Jens and Diehl, Richard and Busch, Kurt},
@@ -543,6 +555,17 @@
   pages = {431--437},
   year = {1962},
   doi = {10.1090/S0025-5718-1962-0150954-0}
+}
+
+@article{Rancic1996,
+  title = {A global shallow-water model using an expanded spherical cube: Gnomonic versus conformal coordinates},
+  author = {Ran\v{c}i\'{c}, M. and Purser, R. J. and Mesinger, F.},
+  journal = {Quarterly Journal of the Royal Meteorological Society},
+  volume = {122},
+  number = {532},
+  pages = {959--982},
+  year = {1996},
+  doi = {10.1002/qj.49712253209}
 }
 
 @article{Roberts2018,
