Add Multirate RK and MIS method tutorials

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -831,6 +831,17 @@
   doi = {10.5194/gmd-10-359-2017},
 }
 
+@article{WenschKnothGalant2009,
+  author = {Wensch, J. and Knoth O., and Galant, A.},
+  title = {Multirate infinitesimal step methods for atmospheric flow simulation},
+  journal = {BIT Numerical Mathematics},
+  year = {2009},
+  volume = {49},
+  number = {2},
+  pages = {449--473},
+  doi = {10.1007/s10543-009-0222-3}
+}
+
 @article {WickerSkamarock2002,
   author = "Louis J. Wicker and William C. Skamarock",
   title = "Time-Splitting Methods for Elastic Models Using Forward Time Schemes",
